fixed header overlap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ h3 {
     font-size: 30px;
 }
 
-main {
+.main-wrapper {
     flex: 1 0 auto;
 }
 
